src/App.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
}

a {
  text-decoration: none;
}

.container {
  margin: 10px auto;
  width: 80%;
}

.btn {
  padding: 0.6rem;
  font-size: 1rem;
  cursor: pointer;
  border: none;
  outline: none;
  border-radius: 4px;
  transition: all 0.3s;
  width: 100%;
  text-align: center;
}

.btn-primary {
  background-color: #444;
  color: white;
}

.btn-danger {
  background-color: #ff4848;
  color: white;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
  color: #f7f7f7;
  background-color: #000;
}

.btn-danger:hover,
.btn-danger:focus,
.btn-danger:active {
  color: #f7f7f7;
  background-color: #f72323;
}

.mx-3 {
  margin-left: 0.6rem;
  margin-right: 0.6rem;
}

form {
  width: 100%;
}

nav {
  height: 5rem;
  background: linear-gradient(rgb(97, 97, 97), rgb(156, 156, 156));
  display: flex;
  justify-items: flex-start;
  align-items: center;
  overflow: hidden;

  .nav-brand {
    font-size: 40px;
    margin: 0 1rem;
    color: rgb(255, 255, 255);
    font-weight: 600;
    cursor: pointer;
  }

  ul {
    list-style: none;
    display: flex;
    font-size: 1.4rem;
  }

  li {
    margin: 0 0.6rem;
    color: rgb(255, 255, 255);
    cursor: pointer;
    transition: color 0.3s;
  }
  li:hover {
    color: rgb(188, 188, 233);
  }
}

.wrapper {
  width: 80vw;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  column-gap: 1rem;
  row-gap: 1rem;
  // max-height: 70vh;
  padding: 1rem;
  border-radius: 4px;
  box-shadow: 0 0 0 0.25rem rgb(241, 241, 241);

  .card {
    height: 200px;
    border: 1px solid rgb(150, 150, 150);
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;

    .card__header {
      height: 4rem;
      font-size: 2rem;
      color: rgb(94, 94, 94);
      padding: 0.6rem;
      background-color: rgb(230, 230, 230);
    }
    .card__footer {
      margin: 0.8rem 0.6rem;
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      column-gap: 1rem;

      span,
      a {
        padding: 10px;
        border-radius: 4px;
        text-align: center;
        color: white;
        font-size: 1.5rem;
      }
      span.copy {
        background-color: rgb(179, 179, 179);
      }

      .edit {
        background-color: rgb(150, 150, 150);
        transition: all 0.3s;
      }

      .edit:focus,
      .edit:active {
        box-shadow: 0 0 0 0.25rem rgb(196, 196, 196);
      }

      .delete {
        background-color: rgba(255, 72, 72, 0.89);
      }
      span:hover,
      span:focus,
      span:active {
        cursor: pointer;
        transition: all 0.2s;
        color: rgb(231, 231, 231);
      }
    }

    .card__body {
      width: auto;
      background-color: rgb(116, 116, 116);
      padding: 10px;
      margin-top: 0.4rem;
      margin-right: 0.4rem;
      margin-left: 0.4rem;
      border-radius: 4px;
      color: white;
      font-size: 1.5rem;
      text-align: center;
    }
  }
}

// ::-webkit-scrollbar {
//   width: 6px;
// }

@media only screen and (max-width: 1300px) {
  .wrapper {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media only screen and (max-width: 1000px) {
  .wrapper {
    width: 90vw;
    grid-template-columns: 1fr 1fr;
  }
}

@media only screen and (max-width: 768px) {
  .wrapper {
    width: 95vw;
    box-shadow: none;
    grid-template-columns: 1fr;
  }
}

// .App {
//   height: auto;
//   text-align: center;
//   margin: 0 auto;
//   margin-top: 4rem;
//   width: 400px;
//   border-radius: 4px;

//   button {
//     padding: 0.6rem;
//     font-size: 1rem;
//     margin: 2rem;
//   }
//   button:hover {
//     cursor: pointer;
//   }

//   nav {
//     padding: 1rem;
//     h1 {
//       font-size: 2rem;
//       font-weight: bold;
//     }

//     ul {
//       display: flex;
//       justify-content: center;
//       align-items: center;
//     }

//     li {
//       list-style-type: none;
//       margin: 0.6rem 1rem;
//       font-size: 1.2rem;
//     }
//   }

//   .book-list {
//     padding: 1rem;
//     li {
//       list-style: none;
//       font-size: 1.2rem;
//       margin: 0.8rem;
//       padding: 0.4rem;
//       border-radius: 4px;
//     }
//   }
// }

